--- a/src/html/pages/newpage/newpage.njk
+++ b/src/html/pages/newpage/newpage.njk
@@ -1,10 +1,7 @@
 {% extends "layouts/page.njk" %}
-<html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-  </head>
-  <body>
 
-  </body>
-</html>
+{% block meta %}
+  <title>Newpage</title>
+  <meta name="description" content="Newpage">
+
+{% endblock %}
