added image on new page

--- a/src/html/pages/newpage/newpage.njk
+++ b/src/html/pages/newpage/newpage.njk
@@ -1,7 +1,11 @@
 {% extends "layouts/page.njk" %}
 
 {% block meta %}
-  <title>Newpage</title>
-  <meta name="description" content="Newpage">
 
+<body>
+  <img src="/assets/img/newpage/ynmax125.jpg">
+  <h1>Life is beautiful</h1>
+  <p>... Yet Fleeting</p>
+
+</body>
 {% endblock %}
